--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -7,6 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'home' %}">Books</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'add_book' %}">Add Book</a>
+              </li>
+            </ul>
+            
+            <form class="d-flex" method="get" action="{% url 'home' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                
+                <button class="btn btn-success" type="submit">Search</button>
+            </form>
+            
+            {% if results %}
+                <ul>
+                    {% for item in results %}
+                        <li>{{ item.your_field }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+          </div>
+        </div>
+      </nav>
+
     <div class="container">
 
         <h1>Kitaplar Listesi:</h1>
